--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
-html {
-  background-image: url('../images/background.png');
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+.odometer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 100px;
 }
