--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,13 @@ html, body {
 }
 
 html {
-  background-image: url('../images/background.png');
+  background-color: #FC4C02;
+  background-image: linear-gradient(#FD5812, #FC4C02);
 }
 
 .odometer, .tag {
   font-family: 'Roboto' !important;
-  color: #333333
+  color: #FFFFFF;
 }
 
 .odometer {
@@ -17,16 +18,18 @@ html {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 25vmin;
+  font-size: 30vmin;
   font-weight: 100;
+  text-shadow: 2px 4px 3px rgba(255,255,255,0.3);
 }
 
 .tag {
   position: absolute;
-  top: 70%;
+  top: 75%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 6vmin;
   font-weight: 300;
   font-style: italic;
+  text-shadow: 1px 2px 2px rgba(255,255,255,0.3);
 }
