--- a/css/styles.css
+++ b/css/styles.css
@@ -8,28 +8,33 @@ html {
   background-image: linear-gradient(#FD5812, #FC4C02);
 }
 
-.odometer, .tag {
+.odometer, .tag, .best {
+  position: absolute;
   font-family: 'Roboto' !important;
   color: #FFFFFF;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .odometer {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 30%;
   font-size: 30vmin;
   font-weight: 100;
   text-shadow: 2px 4px 3px rgba(255,255,255,0.3);
 }
 
 .tag {
-  position: absolute;
-  top: 75%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 50%;
   font-size: 6vmin;
   font-weight: 300;
   font-style: italic;
   text-shadow: 1px 2px 2px rgba(255,255,255,0.3);
+}
+
+.best {
+  top: 75%;
+  font-size: 3vmin;
+  text-shadow: 1px 2px 2px rgba(255,255,255,0.3);
+  font-weight: 300;
 }
